--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
         "kind": "build",
         "test": true
       },
-      "label": "npm: build",
+      "label": "build",
       "detail": "tsc --build"
     }
   ]
